# IniLib

./: CMakeLists.txt  README.md  main.cpp
code/include/: Exceptions.hpp  IniParser.hpp  IniSection.hpp
code/src/: IniParser.cpp  IniSection.cpp
samples/in/: sample1.ini
tests/: master.cpp
tests/cases/: ParserNestingTests.cpp  ParserTest1.cpp  SectionTests.cpp
tests/ini/in/test1/: globalEntries.ini  sample1.ini
tests/ini/in/test1_core/: comments.ini  sections.ini
tests/ini/in/test2/: absoluteSectionNesting.ini  relativeSectionNesting.ini
tests/ini/in/test2_nesting/: absoluteSectionNesting1.ini  absoluteSectionNesting2.ini  relativeSectionNesting2.ini
tests/scenarios/: ParserCoreTest.cpp  ParserNestingTests.cpp  SectionTests.cpp
tests/scenarios/ParserCore/: ParserConfigHandlingTests.cpp  ParserCoreTest.cpp  ParserNestingTests.cpp
